--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ google_analytics: UA—XXXXXXXX-X
 
 # Author
 author:
-  name:         Chester How
-  url:          https://chester.how
-  email:        chesterhow@gmail.com
+  name:         Rebecca Koleth
+  url:          https://rebeccakoleth
+  email:        rebeccakoleth@gmail.com
 
 # Build settings
 markdown:       kramdown
