--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:          Tale
+title:          Everything I Owe
 description:    "Minimal Jekyll theme for storytellers"
 baseurl:        ""
 url:            "https://chesterhow.github.io"
