--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:          Everything I Owe
 description:    "Minimal Jekyll theme for storytellers"
 baseurl:        ""
-url:            "https://chesterhow.github.io"
+url:            "https://rebeccakoleth.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
