--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:          Everything I Owe
-description:    "Minimal Jekyll theme for storytellers"
+description:    "Something New"
 baseurl:        ""
 url:            "https://rebeccakoleth.github.io"
 excerpt_separator:         "<!--more-->"
